pkg/front_end/testcases/nonfunction_type_aliases/issue41501.dart.weak.modular.expect
library;
//
// Problems in library:
//
// pkg/front_end/testcases/nonfunction_type_aliases/issue41501.dart:13:42: Error: The value 'null' can't be assigned to a variable of type 'FutureOr<A Function()>' because 'FutureOr<A Function()>' is not nullable.
//  - 'A' is from 'pkg/front_end/testcases/nonfunction_type_aliases/issue41501_lib.dart'.
//   FutureOr<AAlias> foLegacyNonNullable = null; // error
//                                          ^
//
// pkg/front_end/testcases/nonfunction_type_aliases/issue41501.dart:15:47: Error: The value 'null' can't be assigned to a variable of type 'FutureOr<A>' because 'FutureOr<A>' is not nullable.
//  - 'A' is from 'pkg/front_end/testcases/nonfunction_type_aliases/issue41501_lib.dart'.
//   FutureOr<AAliasNonNullable> foNonNullable = null; // error
//                                               ^
//
import self as self;
import "issue41501_lib.dart" as opt;

import "dart:async";
import "org-dartlang-testcase:///issue41501_lib.dart";

typedef AAliasNonNullable = opt::A;
typedef AAliasNullable = opt::A?;
static method test() → dynamic {
  FutureOr<() → opt::A*>foLegacyNonNullable = invalid-expression "pkg/front_end/testcases/nonfunction_type_aliases/issue41501.dart:13:42: Error: The value 'null' can't be assigned to a variable of type 'FutureOr<A Function()>' because 'FutureOr<A Function()>' is not nullable.
 - 'A' is from 'pkg/front_end/testcases/nonfunction_type_aliases/issue41501_lib.dart'.
  FutureOr<AAlias> foLegacyNonNullable = null; // error
                                         ^" in null as{TypeError} FutureOr<() → opt::A*>;
  has-declared-initializer FutureOr<() →? opt::A*>foLegacyNullable = null;
  FutureOr<opt::A>foNonNullable = invalid-expression "pkg/front_end/testcases/nonfunction_type_aliases/issue41501.dart:15:47: Error: The value 'null' can't be assigned to a variable of type 'FutureOr<A>' because 'FutureOr<A>' is not nullable.
 - 'A' is from 'pkg/front_end/testcases/nonfunction_type_aliases/issue41501_lib.dart'.
  FutureOr<AAliasNonNullable> foNonNullable = null; // error
                                              ^" in null as{TypeError} FutureOr<opt::A>;
  has-declared-initializer FutureOr<opt::A?>foNullable = null;
  has-declared-initializer FutureOr<opt::A?>foNonNullableNullable = null;
  has-declared-initializer FutureOr<opt::A?>foNullableNullable = null;
}
static method main() → dynamic {}

library opted_out_lib /*isLegacy*/;
import self as opt;
import "dart:core" as core;

import "dart:async";
import "org-dartlang-testcase:///issue41501.dart";

typedef AAlias = () →* opt::A*;
class A extends core::Object {
  synthetic constructor •() → opt::A*
    : super core::Object::•()
    ;
  abstract member-signature method noSuchMethod(core::Invocation* invocation) → dynamic; -> core::Object::noSuchMethod
  abstract member-signature get _identityHashCode() → core::int*; -> core::Object::_identityHashCode
  abstract member-signature method _instanceOf(dynamic instantiatorTypeArguments, dynamic functionTypeArguments, dynamic type) → core::bool*; -> core::Object::_instanceOf
  abstract member-signature method _simpleInstanceOf(dynamic type) → core::bool*; -> core::Object::_simpleInstanceOf
  abstract member-signature method _simpleInstanceOfTrue(dynamic type) → core::bool*; -> core::Object::_simpleInstanceOfTrue
  abstract member-signature method _simpleInstanceOfFalse(dynamic type) → core::bool*; -> core::Object::_simpleInstanceOfFalse
  abstract member-signature operator ==(dynamic other) → core::bool*; -> core::Object::==
  abstract member-signature get hashCode() → core::int*; -> core::Object::hashCode
  abstract member-signature method toString() → core::String*; -> core::Object::toString
  abstract member-signature get runtimeType() → core::Type*; -> core::Object::runtimeType
}
static method test() → dynamic {
  has-declared-initializer FutureOr<() →* opt::A*>* foLegacy = null;
  has-declared-initializer FutureOr<opt::A*>* foNonNullable = null;
  has-declared-initializer FutureOr<opt::A*>* foNullable = null;
}
